add /mod/list; fix auth token in report actions (make it url safe); change response of /mod/ban/{room_id} and /mod/unban/{room_id} to http 200 and human-readable message
